added flight session
